--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <p class="disclaimer">
       This is not a real NPS website. It is an educational exercise. If you
       landed here by accident, to find the real website visit
-      <a href="parkUrl">[park name]</a>
+      <a href="parkUrl">Yellowstone National Park</a>
     </p>
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
@@ -41,12 +41,12 @@
         </li>
       </ul>
     </div>
-    <header>
+    <header class="header1">
       <section class="global-header">
         <a href="index.html" class="site-title"
           ><span class="logo" role="presentation"></span>
-          <span>National Park Service</span></a
-        >
+          <span id="NPS-title">National Park Service</span></a>
+
         <div class="global-header__right">
           <a class="search-icon" href="#park-footer">
             <svg class="icon">
@@ -61,9 +61,26 @@
             <span class="visually-hidden">Open</span> Menu
           </button>
         </div>
+
         <nav class="global-nav">
-          <h2 class="global-nav__section-heading">Explore this Park</h2>
-          <ul class="global-nav__list">
+          <!-- <h2 class="global-nav__section-heading">Explore this Park</h2> -->
+        </nav>
+      </section>
+
+      <section id="park-header">
+        <div class="hero-banner">
+          <img src="#" alt="#"/>
+          <div class="content">
+            <a href="" class="park-title">Yellowstone</a>
+            <p class="subheader">
+              <span>National Park</span>
+              <span>ID, MT, WY</span>
+            </p>
+          </div>     
+        </div>
+      </section>
+      
+          <!-- <ul class="global-nav__list">
             <li>
               <div class="global-nav__split-button">
                 <a href="#">Plan Your Visit</a>
@@ -77,19 +94,47 @@
                 </button>
               </div>
             </li>
-          </ul>
-        </nav>
-      </section>
-      <section id="park-header">
-        <a href="#">
+          </ul> -->
+
+      <section>
+      <nav class="park-nav">
+        <a href="#" class="park-nav-content">
           <span>Info</span>
           <svg class="icon" role="presentation" focusable="false">
             <use xlink:href="/images/sprite.symbol.svg#info"></use>
           </svg>
         </a>
-        <svg class="icon" role="presentation" focusable="false">
-          <use xlink:href="/images/sprite.symbol.svg#alert"></use>
-        </svg>
+
+        <a href="#" class="park-nav-content">
+          <span>Alerts</span>
+          <svg class="icon" role="presentation" focusable="false">
+            <use xlink:href="/images/sprite.symbol.svg#alert"></use>
+          </svg>
+        </a>
+
+        <a href="#" class="park-nav-content">
+          <span>Maps</span>
+          <svg class="icon" role="presentation" focusable="false">
+            <use xlink:href="/images/sprite.symbol.svg#location"></use>
+          </svg>
+        </a>
+
+        <a href="#" class="park-nav-content">
+          <span>Calendar</span>
+          <svg class="icon" role="presentation" focusable="false">
+            <use xlink:href="/images/sprite.symbol.svg#calendar"></use>
+          </svg>
+        </a>
+
+        <a href="#" class="park-nav-content">
+          <span>Fees</span>
+          <svg class="icon" role="presentation" focusable="false">
+            <use xlink:href="/images/sprite.symbol.svg#fee-22"></use>
+          </svg>
+        </a>
+      </nav>
+      </section>
+
       </section>
     </header>
     <main id="main"></main>
