--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <body>
     <p class="disclaimer">
       This is not a real NPS website. It is an educational exercise. If you
-      landed here by accident, to find the real website visit
-      <a href="parkUrl">Yellowstone National Park</a>
+      landed here by accident, to find the real website Visit
+      <a href="parkUrl"></a>
     </p>
     <div class="skip-links" aria-label="short-cut links" role="navigation">
       <ul>
